--- a/package.xml
+++ b/package.xml
@@ -11,8 +11,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>cv_bridge</depend>
   <depend>roscpp</depend>
-  <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>realsense2_camera</depend>
 
   <export>
   </export>
